# chapterly

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/decorators/: __init__.py  feature_flags.py
backend/core/middleware/: __init__.py  feature_flags.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar.py  0003_systemconfiguration.py  0004_alter_systemconfiguration_retro_enabled.py
backend/core/models/: __init__.py  configuration.py  user.py
backend/core/permissions/: __init__.py  configuration.py
backend/core/serializers/: __init__.py  change_password_serializer.py  configuration_serializer.py  login_serializer.py  register_serializer.py  token_response_serializer.py  user_profile_serializer.py
backend/core/tests/: conftest.py  fixtures.py
backend/core/views/: __init__.py  change_password_view.py  configuration_view.py  login_view.py  logout_view.py  register_view.py  user_profile_view.py  user_stats_view.py
backend/talks/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/talks/filters/: __init__.py  idea_filter.py
backend/talks/migrations/: 0001_initial.py  (+3 more)
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+153 files in other folders)
